Change file structure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>Современные технологии промышленного производства</h1>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="../scripts/main.js"></script>
 </body>
 
 </html>
