Реализовано всплывающее меню

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
 <body>
   <h1>Современные технологии промышленного производства</h1>
+
+<div class="wrapper">
+  <a id="trigger" href="#" target="_blank" rel="noopener noreferrer">trigger</a>
+  <div id="menu" class="submenu hidden">menu</div>
+  
+</div>
+
   <script type="module" src="../scripts/main.js"></script>
 </body>
 
