сделала layout страницы и блоки с названием и продукцией

--- a/index.html
+++ b/index.html
@@ -1,16 +1,51 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="styles/index.css" rel="stylesheet" />
+    <title>СТПП</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>СТПП</title>
-</head>
+  <body>
+    <div class="header"></div>
+    <main class="page">
+      <section class="wrapper">
+        <div class="wrapper__container">
+          <h1 class="wrapper__title">Производитель решетчатого настила</h1>
+        </div>
+      </section>
+      <section class="products">
+        <!-- <img class="products__picture" src="picture/сетка.png"> -->
+        <div class="products__container">
+          <h2 class="products__title">Наша продукция</h2>
 
-<body>
-  <h1>Современные технологии промышленного производства</h1>
-  <script type="module" src="../scripts/main.js"></script>
-</body>
+          <section class="products__track">
+              <div class="product__first">
+                <h3 class="title">Сварной настил</h3>
+                <a href="#" class="product__first-link" target="_blank"></a>
+                <!-- <img class="product__img" src="picture/0b7d4239-no-bg-preview (carve.photos).png"> -->
+              </div>
+              <div class="product__second">
+                <h3 class="title">Ступени</h3>
+                <a href="#" class="product__second-link" target="_blank"></a>
+                <!-- <img class="product__img" src="picture/0b7d4239-no-bg-preview (carve.photos).png"> -->
+              </div>
+              <div class="product__third">
+                <h3 class="title">Крепеж</h3>
+                <a href="#" class="product__third-link" target="_blank"></a>
+                <!-- <img class="product__img" src="picture/0b7d4239-no-bg-preview (carve.photos).png"> -->
+              </div>
 
+
+            
+          </section>
+        </div>
+      </section>
+    </main>
+    <div class="footer"></div>
+
+    <script type="module" src="../scripts/main.js"></script>
+  </body>
 </html>
