переименовала фотки, убрала лишние классы

--- a/index.html
+++ b/index.html
@@ -21,26 +21,24 @@
         <div class="products__container">
           <h2 class="products__title">Наша продукция</h2>
 
-          <section class="products__track">
-              <div class="product__first">
-                <h3 class="title">Сварной настил</h3>
-                <a href="#" class="product__first-link" target="_blank"></a>
-                <!-- <img class="product__img" src="picture/0b7d4239-no-bg-preview (carve.photos).png"> -->
-              </div>
-              <div class="product__second">
-                <h3 class="title">Ступени</h3>
-                <a href="#" class="product__second-link" target="_blank"></a>
-                <!-- <img class="product__img" src="picture/0b7d4239-no-bg-preview (carve.photos).png"> -->
-              </div>
-              <div class="product__third">
-                <h3 class="title">Крепеж</h3>
-                <a href="#" class="product__third-link" target="_blank"></a>
-                <!-- <img class="product__img" src="picture/0b7d4239-no-bg-preview (carve.photos).png"> -->
-              </div>
+          <ul class="products__track">
+            <li class="product product__link">
+              <h3 class="title">Сварной настил</h3>
+              <a href="#" class="product__link" target="_blank"></a>
+              <!-- <img class="product__img" src="picture/0b7d4239-no-bg-preview (carve.photos).png"> -->
+            </li>
+            <li class="product product__link">
+              <h3 class="title">Ступени</h3>
+              <a href="#" class="product__link" target="_blank"></a>
+              <!-- <img class="product__img" src="picture/0b7d4239-no-bg-preview (carve.photos).png"> -->
+            </li>
+            <li class="product product__link">
+              <h3 class="title">Крепеж</h3>
+              <a href="#" class="product__link" target="_blank"></a>
+              <!-- <img class="product__img" src="picture/0b7d4239-no-bg-preview (carve.photos).png"> -->
+            </li>
+          </ul>
 
-
-            
-          </section>
         </div>
       </section>
     </main>
