--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <header class="header">
       <div class="content">
         <div class="header__inner">
-          <div class="header__logo logo">logo</div>
+          <div class="header__logo logo">
+
+            <a class="link" href="/">logo</a>
+
+          </div>
           <!-- <button type="button" class="btn">Рассчитать стоимость</button> -->
           <ul class="header__contacts">
             <li><a tel="tel:+79999999999" href="#">+7 999 999-99-99</a></li>
@@ -66,7 +70,7 @@
               </div>
             </li>
             <a class="menu__item link" href="#">Производство</a>
-            <a class="menu__item link" href="#">Услуги</a>
+            <a id="uslugi" class="menu__item link" href="/services">Услуги</a>
             <a class="menu__item link" href="#">О компании</a>
             <a class="menu__item link" href="#">Сертификаты</a>
             <a class="menu__item link" href="#">Контакты</a>
@@ -75,36 +79,7 @@
       </div>
     </header>
 
-    <main class="page">
-      <section class="wrapper">
-        <div class="wrapper__container">
-          <h1 class="wrapper__title">Производитель решетчатого настила</h1>
-        </div>
-      </section>
-      <section class="products">
-        <!-- <img class="products__picture" src="picture/сетка.png"> -->
-        <div class="products__container">
-          <h2 class="products__title">Наша продукция</h2>
-
-          <ul class="products__track">
-            <li class="product product__link">
-              <h3 class="title">Сварной настил</h3>
-              <a href="#" class="product__link" target="_blank"></a>
-              <!-- <img class="product__img" src="picture/0b7d4239-no-bg-preview (carve.photos).png"> -->
-            </li>
-            <li class="product product__link">
-              <h3 class="title">Ступени</h3>
-              <a href="#" class="product__link" target="_blank"></a>
-              <!-- <img class="product__img" src="picture/0b7d4239-no-bg-preview (carve.photos).png"> -->
-            </li>
-            <li class="product product__link">
-              <h3 class="title">Крепеж</h3>
-              <a href="#" class="product__link" target="_blank"></a>
-              <!-- <img class="product__img" src="picture/0b7d4239-no-bg-preview (carve.photos).png"> -->
-            </li>
-          </ul>
-        </div>
-      </section>
+    <main id="content" class="page">
     </main>
     <div class="footer"></div>
 
