сделала бургер-меню и адаптив главной страницы, кроме подвала

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
   </head>
 
   <body>
-    <header class="header">
+    <header class="header open">
       <div class="content">
+        <button class="header__burger-btn" id="burger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
         <div class="header__inner">
           <div class="header__logo">
             <a class="logo link" href="/">
