сделала адаптив футера, немного изменила бургер-меню, чтобы покрасивше было. И изменила расположение текста на среднем блоке

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <main id="content" class="page"></main>
     <footer class="footer">
       <div class="footer__container">
-        <div class="footer__inner">
+
           <div class="footer__logo">
             <img class="logo__img" src="./picture/logo_prev_ui.png">
           </div>
@@ -95,13 +95,13 @@
             <h3>Ст3настил</h3>
           </div> -->
           <div class="footer__map">
-            <a class="link" href="#">
+            <a class="footer__link" href="#">
               <h3>карта сайта</h3>
             </a>
   
           </div>
 
-        </div>
+
       
        
 
@@ -112,12 +112,11 @@
             <p>© Все права защищены</p>
           </div>
           <div class="footer__condition">
-            <a class="link" href="#">
-              <p>Политика конфиденциальности</p>
+            <p>Пользовательское соглашение</p>
+            <a class="footer__link" href="#">
             </a>
-            <a class="link" href="#">
-              <p>Пользовательское соглашение</p>
-
+            <a class="footer__link" href="#">
+              <p>Политика конфиденциальности</p>
             </a>
 
           </div>
