--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
             <p>© Все права защищены</p>
           </div>
           <div class="footer__condition">
-            <p>Пользовательское соглашение</p>
+            Пользовательское соглашение
             <a class="footer__link" href="#">
             </a>
             <a class="footer__link" href="#">
-              <p>Политика конфиденциальности</p>
+              Политика конфиденциальности
             </a>
 
           </div>
