--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <header class="header open">
-      <div class="content">
+      <div class="header__content content">
         <button class="header__burger-btn" id="burger">
           <span></span>
           <span></span>
