--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="footer__container">
 
           <div class="footer__logo">
-            <img class="logo__img" src="./assets/logo_prev_ui.png">
+            <img class="logo__img" src="/logo_prev_ui.png">
           </div>
           <!-- <div class="logo__title">
             <h3>Ст3настил</h3>
