--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header__inner"> 
           <div class="header__logo">
             <a class="logo link" href="/">
-              <img class="logo__img" src="/logo_prev_ui.png" alt="logo">
+              <img class="logo__img" src="/new_logo-2.png" alt="logo">
             </a>
 
           </div> 
@@ -89,7 +89,7 @@
       <div class="footer__container">
 
           <div class="footer__logo">
-            <img class="logo__img" src="/logo_prev_ui.png">
+            <img class="logo__img" src="/new_logo-2.png">
           </div>
           <!-- <div class="logo__title">
             <h3>Ст3настил</h3>
